<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StudentEmploymentApp</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login Screen</string>
    <string name="calendar">Calendar</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="Login">Login</string>
    <string name="eighta">8am</string>
    <string name="ninea">9am</string>
    <string name="tena">10am</string>
    <string name="elevena">11am</string>
    <string name="twelvea">12am</string>
    <string name="eightthirtya">8:30am</string>
    <string name="ninethirtya">9:30am</string>
    <string name="tenthirtya">10:30am</string>
    <string name="eleventhirtya">11:30am</string>
    <string name="twelvep">12pm</string>
    <string name="onep">1pm</string>
    <string name="twop">2pm</string>
    <string name="threep">3pm</string>
    <string name="fourp">4pm</string>
    <string name="fivep">5pm</string>
    <string name="sixp">6pm</string>
    <string name="sevenp">7pm</string>
    <string name="eightp">8pm</string>
    <string name="ninep">9pm</string>
    <string name="tenp">10pm</string>
    <string name="elevenp">11pm</string>
    <string name="twelvethirtyp">12:30pm</string>
    <string name="onethirtyp">1:30pm</string>
    <string name="twothirtyp">2:30pm</string>
    <string name="threethirtyp">3:30pm</string>
    <string name="fourthirtyp">4:30pm</string>
    <string name="fivethirtyp">5:30pm</string>
    <string name="sixthirtyp">6:30pm</string>
    <string name="seventhirtyp">7:30pm</string>
    <string name="eightthirtyp">8:30pm</string>
    <string name="ninethirtyp">9:30pm</string>
    <string name="tenthirtyp">10:30pm</string>
    <string name="eleventhirtyp">11:30pm</string>
    <string name="btn_display">Submit</string>
    <string name="title_activity_calendar2">Monday</string>
    <string name="title_activity_tuesday">Tuesday</string>
    <string name="title_activity_wednesday">Wednesday</string>
    <string name="title_activity_thursday">Thursday</string>
    <string name="title_activity_friday">Friday</string>
    <string name="title_activity_saturday">Saturday</string>
    <string name="title_activity_sunday">Sunday</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="title_activity_view">View</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_view_hours">ViewHours</string>
    <string name="display_hours_string">%1$s</string>

</resources>